@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
-<!-- $Id: mod-server.html,v 1.21 2002/12/24 02:30:03 wcc Exp $ -->
+<!-- $Id: mod-server.html,v 1.22 2003/01/15 01:03:04 wcc Exp $ -->
 
 <html>
   <head>
@@ -116,16 +116,6 @@
         <dd>
           <p>Set the default port which should be used if none is specified
           with &#39;.jump&#39; or in &#39;set servers&#39;.</p>
-        </dd>
-
-        <dt><strong>set strict-servernames 0</strong></dt>
-
-        <dd>
-          <p>Often, IRC servers call themselves a name other than their
-          actual hostname. If you want Eggdrop to replace your entry in the
-          config file with this name, set this to 1. If you set this setting
-          to 0, Eggdrop will keep a separate list of what IRC servers call
-          themselves.</p>
         </dd>
 
         <dt><strong>set server-cycle-wait 60</strong></dt>
