@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- This should contain a fully qualified path to your Eggdrop executable.
 #
-# $Id: eggdrop.conf,v 1.9 2002/12/27 22:48:49 wcc Exp $
+# $Id: eggdrop.conf,v 1.10 2003/01/15 01:03:04 wcc Exp $
 #
 # This is a sample Eggdrop configuration file which includes all possible
 # settings that can be used to configure your bot.
@@ -824,12 +824,6 @@ set flood-ctcp 3:60
 # This settings makes the bot cycle forever through the server list until
 # it successfully connects to one.
 set never-give-up 1
-
-# Often, IRC servers call themselves a name other than their actual
-# hostname. If you want Eggdrop to replace your entry in the config
-# file with this name, set this to 1. If you set this setting to 0,
-# Eggdrop will keep a separate list of what IRC servers call themselves.
-set strict-servernames 0
 
 # This setting defines how long Eggdrop should wait before moving from one
 # server to another on disconnect. If you set 0 here, Eggdrop will not wait
