@@ -10,7 +10,7 @@
  * statement, leave the rest of the file alone, this allows better
  * overlapping patches.
  *
- * $Id: patch.h,v 1.868 2003/01/15 00:35:01 wcc Exp $
+ * $Id: patch.h,v 1.869 2003/01/15 01:03:05 wcc Exp $
  */
 /*
  * Copyright (C) 1997 Robey Pointer
@@ -41,12 +41,12 @@ patch("CVS");			/* CVS version */
  *
  *
  */
-patch("1042590744");		/* current unixtime */
+patch("1042592486");		/* current unixtime */
 /*
  *
  *
  */
-patch("nickbind");
+patch("tclvar_server");
 /*
  *
  *
